tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Minecart-AAAAAAAAAAAAAAAAAAACpQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 677,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After you craft your first cart the journey can begin...\n\nWell, not really. You will need some kind of tracks first.\n\n[note]We here at QuestBook, Inc. do not guarantee the usefulness of minecarts or trains in any way. Especially since you can mine out a vein in a single session once you have a hammer and backpacks.[/note]\n\n[warn]WARNING: Unprotected carts can be knocked off their rails by lightning. Cover the area with blocks to prevent carts from disappearing.[/warn]\n\n[warn]Also, make sure to keep your cart in one chunk, or use chunkloaders covering the whole area the cart works within. Loading/unloading chunks may cause carts to disappear or duplicate.[/warn]\n\n[note]You should only make these if you want to have fun with them, as anything they can do is better done by other methods, including the Long Distance Fluid Pipeline. Excessive minecart and train use on servers may cause lag and you may be asked to switch later anyway.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Minecart",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
