tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__PlanarGateways-U6wfKJSxTiyYvcz-f-76EA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10714430941523016208,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A planar gateway from Thaumic Horizons lets you travel to a pocket dimension. Setting up multiple gateways (up to 4) to the pocket dimension even allows for travel to other dimensions!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Planar Gateways",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
