tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Relocator-8QSORTVOSOaUXC6mQurMgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3841087685995973760,
  "prerequisites": [
    1198
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The relocator allows for teleportation to previously marked locations, even between dimensions.\n\n[note]Uses quite a lot of power so a GraviChestPlate or other energy sources are recommended.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Relocator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1198
  ],
  "rewards": [],
  "tasks": []
}
