tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__RowRowRowYourBoa-AAAAAAAAAAAAAAAAAAACmg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 666,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You live close to the water and don't have a boat? Man, get it together.\n\nYou need wooden planks, slabs and a knife to craft one. (This is also quest id 666, be careful, something is going on.)\n\n[note]We here at QuestBook, Inc. do not guarantee the usefulness of boats. The standard worldgen does not include oceans, so their usefulness is heavily curtailed. There are lots of rivers, but horses might be more useful if not on a server.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "Row, Row, Row Your Boat",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
