tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__SecretAngelAssas-AAAAAAAAAAAAAAAAAAAFQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1345,
  "prerequisites": [
    1344,
    779
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Infusing your Wings with nano technology seems to be the next step, to further improve them and combine magic and technology.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Secret-Angel-Assasin",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1344,
    779
  ],
  "rewards": [],
  "tasks": []
}
