tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__SteamLocomotive-AAAAAAAAAAAAAAAAAAAEoA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1184,
  "prerequisites": [
    65,
    1183
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The steam locomotive is much better than the furnace cart. You can control the speed and the direction the locomotive will move. You need to put water and coal inside to make steam to power the locomotive.\n\nYou can use a water tank or other water source to refill this locomotive by placing a Fluid Loader above it at a stop. The loader can be placed either directly above the track, or a block higher to give you clearance when riding the train. (You can't actually ride a train unless you sit in a normal minecart.)\n\nThis locomotive runs on any fuel you can burn in a steam boiler, perhaps you will want to use compressed coal blocks or similar. You can use an Item Loader to refuel it.\n\nOnce you have stable electricity in MV, you will likely move to the Electric Locomotive.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Steam Locomotive",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    1183
  ],
  "rewards": [],
  "tasks": []
}
